--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
     <script src="./navbar.js"></script>
     <!-- jQuery 1.7.2+ or Zepto.js 1.0+ -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <!-- Magnific Popup core JS file -->
-    <script src="./magnific-popup/dist/jquery.magnific-popup.min.js"></script>
+    <!-- Magnific Popup core JS file 
+    <script src="./magnific-popup/dist/jquery.magnific-popup.min.js"></script>  -->
+    <script src="./magnific-popup.min.js"></script>
     <script src="./main.js"></script>
 </body>
