--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             
             <div class="navbar-menu is-active" >
                 <div class="navbar-end">
-                    <a class="navbar-item" href="https://twitter.com/nicofierro1">
+                    <!-- <a class="navbar-item" href="https://twitter.com/nicofierro1">
                         <span class="icon">
                             <i class="fa-brands fa-twitter fa-xl"></i>
                         </span>
-                    </a>
+                    </a> -->
                     <a class="navbar-item" href="https://github.com/nicolasf96">
                         <span class="icon">
                             <i class="fa-brands fa-github fa-xl"></i>
@@ -40,7 +40,7 @@
                             <i class="fa-brands fa-instagram fa-xl"></i>
                         </span>
                     </a>
-                    <a class="navbar-item" href="https://www.behance.net/grafic4s/">
+                    <a class="navbar-item" href="https://www.behance.net/_nicolasfierro/">
                         <span class="icon">
                             <i class="fa-brands fa-behance fa-xl"></i>
                         </span>
@@ -58,8 +58,8 @@
         <div class='columns' style="margin-bottom: 75px;">
             <div class='column'>
                 <h1 class="title is-1 myname">Nicolás<br>Fierro</h1>
-                <h2 class="title is-5" style="margin-bottom:5px!important">Web & Graphic Design</h2>
-                <h2 class="title is-5" style="margin-bottom:5px!important">System Engineering Student</h2>
+                <!-- <h2 class="title is-5" style="margin-bottom:5px!important">Web & Graphic Design</h2> -->
+                <h2 class="title is-5" style="margin-bottom:5px!important">Ingeniería en Sistemas de Información</h2>
                 <span class="icon-text">
                     <span class="icon">
                       <i class="fa-solid fa-location-dot"></i>
@@ -72,155 +72,96 @@
 
             </div>
             <div class='column' style="text-align: right;">
-                <p class="title is-3">#SocialMedia</p>
-                <p class="title is-3">#WebSites</p>
-                <p class="title is-3">#Flyers</p>
-                <p class="title is-3">#Photoshop</p>
+                <!-- <p class="title is-3">#SocialMedia</p> -->
+                <p class="title is-3">#Front end</p>
+                <p class="title is-3">#Diseño UI</p>
+                <p class="title is-3">#Business Intelligence</p>
     
             </div>
         </div>
         <div class="container">
             <section class="container centering">
-                <h3 class="title is-2">Portfolio</h3>
-                <p>Check out my work and leave me a dm if you like it!</p>
+              <p class="description mb-0">Estudiante avanzado de Ing. en sistemas de información.
+                Mi objetivo es desarrollarme en el área laboral participando
+                en proyectos interesantes que me desafíen a aplicar mis 
+                conocimientos y desarrollar nuevas competencias.
+                Aspiro a contribuir activamente a equipos de trabajo
+                dinámicos e innovadores, donde pueda crecer
+                profesionalmente aportando de manera significativa
+                al logro de objetivos empresariales.</p>
+                <h2 class="title is-2 ">Portfolio</h2>
 
-                <div class='row'>
-                    <div class='columna'>
-                        <a  class="gallery-item" href="./img/camo.png">
-                            <figure class="imghvr-push-up">
-                                <img src="./img/camo.png" alt="example-image">
-                                <figcaption>
-                                  <h3 class="">First Work</h3>
-                                  <p class="">
-                                    <i>Made with Photoshop and css</i>
-                                  </p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                        <a class="gallery-item" href="./img/jc1.jpg">
-                            <figure class="imghvr-push-up">
-                                <img src="./img/jc1.jpg" alt="example-image">
-                                <figcaption>
-                                  <h3 class="">First Work</h3>
-                                  <p class="">
-                                    <i>Made with Photoshop and css</i>
-                                  </p>
-                                </figcaption>
-                            </figure>
 
-                        </a>
-                        <a class="gallery-item" href="./img/pa1.jpg">
-                            <figure class="imghvr-push-up">
-                                <img src="./img/pa1.jpg" alt="example-image">
-                                <figcaption>
-                                  <h3 class="">First Work</h3>
-                                  <p class="">
-                                    <i>Made with Photoshop and css</i>
-                                  </p>
-                                </figcaption>
-                            </figure>
-
-                        </a>
-                    </div>
-                    <div class='columna'>
-                        <a  class="gallery-item" href="./img/RS-WP.webp">
-                            <figure class="imghvr-push-up">
-                                <img src="./img/RS-WP.webp" alt="example-image">
-                                <figcaption>
-                                  <h3 class="">First Work</h3>
-                                  <p class="">
-                                    <i>Made with Photoshop and css</i>
-                                  </p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                        <a  class="gallery-item" href="./img/rs1.jpg">
-                            <figure class="imghvr-push-up">
-                                <img src="./img/rs1.jpg" alt="example-image">
-                                <figcaption>
-                                  <h3 class="">First Work</h3>
-                                  <p class="">
-                                    <i>Made with Photoshop and css</i>
-                                  </p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                        <a  class="gallery-item" href="./img/rs2.jpg">
-                            <figure class="imghvr-push-up">
-                                <img src="./img/rs2.jpg" alt="example-image">
-                                <figcaption>
-                                  <h3 class="">First Work</h3>
-                                  <p class="">
-                                    <i>Made with Photoshop and css</i>
-                                  </p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                        <a  class="gallery-item" href="./img/camo.png">
-                            <figure class="imghvr-push-up">
-                                <img src="./img/camo.png" alt="example-image">
-                                <figcaption>
-                                  <h3 class="">First Work</h3>
-                                  <p class="">
-                                    <i>Made with Photoshop and css</i>
-                                  </p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                    <div class='columna'>
-                        <a  class="gallery-item" href="./img/squares.png">
-                            <figure class="imghvr-push-up">
-                                <img src="./img/squares.png" alt="example-image">
-                                <figcaption>
-                                  <h3 class="">First Work</h3>
-                                  <p class="">
-                                    <i>Made with Photoshop and css</i>
-                                  </p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                        <a  class="gallery-item" href="./img/pa1.jpg">
-                            <figure class="imghvr-push-up">
-                                <img src="./img/pa1.jpg" alt="example-image">
-                                <figcaption>
-                                  <h3 class="">First Work</h3>
-                                  <p class="">
-                                    <i>Made with Photoshop and css</i>
-                                  </p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                        <a  class="gallery-item" href="./img/RS-WP.webp">
-                            <figure class="imghvr-push-up">
-                                <img src="./img/RS-WP.webp" alt="example-image">
-                                <figcaption>
-                                  <h3 class="">First Work</h3>
-                                  <p class="">
-                                    <i>Made with Photoshop and css</i>
-                                  </p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                        <a  class="gallery-item" href="./img/squares.png">
-                            <figure class="imghvr-push-up">
-                                <img src="./img/squares.png" alt="example-image">
-                                <figcaption>
-                                  <h3 class="">First Work</h3>
-                                  <p class="">
-                                    <i>Made with Photoshop and css</i>
-                                  </p>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
+                <div class='columns is-multiline mt-5 flex-start'>
+                  <div class='column is-4'>
+                    <figure class="imghvr-push-up">
+                      <img src="./img/listing-home.png" alt="">
+                      <figcaption>
+                        <h3 class="">Listing web app</h3>
+                        <p class="">
+                          <i>Listado de tiendas/lugares.</i>
+                          <i class="herramientas">Nodejs + Express & Angular</i>
+                        </p>
+                      </figcaption>
+                    </figure>
+                  </div>
+                  <div class='column is-4'>
+                    <figure class="imghvr-push-up">
+                      <img class="faq" src="./img/faq-utn.png" alt="">
+                      <figcaption>
+                        <h3 class="">F.A.Q. UTN</h3>
+                        <p class="">
+                          <i>Frequently Asked Questions UTN</i>
+                          <i class="herramientas">Nodejs, Express, Sequelize</i>
+                          <i class="herramientas">Html, Css, Javascript</i>
+                        </p>
+                      </figcaption>
+                    </figure>
+                  </div>
+                  <div class='column is-4'>
+                    <figure class="imghvr-push-up">
+                      <img src="./img/design1.png" alt="">
+                      <figcaption>
+                        <h3 class="">Diseño Interfaz</h3>
+                        <p class="">
+                          <i>Diseño UI para web</i>
+                          <i class="herramientas">Adobe XD - Photoshop</i>
+                        </p>
+                      </figcaption>
+                    </figure>
+                  </div>
+                  <div class='column is-4'>
+                    <figure class="imghvr-push-up">
+                      <img src="./img/design2.png" alt="">
+                      <figcaption>
+                        <h3 class="">Puentes Rehabilitación</h3>
+                        <p class="">
+                          <i>Diseño de interfaz</i>
+                          <i class="herramientas">Figma - Adobe XD</i>
+                        </p>
+                      </figcaption>
+                    </figure>
+                  </div>
+                  <div class='column is-4'>
+                    <figure class="imghvr-push-up">
+                      <img src="./img/design3.png" alt="">
+                      <figcaption>
+                        <h3 class="">Purity (Marca ficticia)</h3>
+                        <p class="">
+                          <i>Interfaz para marca ficticia</i>
+                          <i class="herramientas">Figma - Photoshop</i>
+                        </p>
+                        <a href="https://www.behance.net/gallery/191096773/Purity-not-real-Brand">Proyecto en Behance</a>
+                      </figcaption>
+                    </figure>
+                  </div>
                 </div>
             </section>
         </div>
         <footer class="myfooter">
             <hr class="separator">
             <div class='container centering'>
-                Build by Nicolás Fierro - 2022 ©️
+                Build by Nicolás Fierro
             </div>
         </footer>
     </div>
