--- a/index.html
+++ b/index.html
@@ -102,8 +102,22 @@
                           <i>Listado de tiendas/lugares.</i>
                           <i class="herramientas">Nodejs + Express & Angular</i>
                         </p>
+                        <button class="js-modal-trigger button is-primary" data-target="modal-listing-app">
+                          Abrir
+                        </button>
                       </figcaption>
                     </figure>
+                    <div class="modal" id="modal-listing-app">
+                      <div class="modal-background"></div>
+                      <div class="modal-content">
+                        <div class="box">
+                          <p class="modal-title">Listado de tiendas</p>
+                          <p class="herramientas">Nodejs + Express & Angular</p>
+                          <img src="./img/listing-home.png" alt="">
+                        </div>
+                      </div>
+                      <button class="modal-close is-large" aria-label="close"></button>
+                    </div>
                   </div>
                   <div class='column is-4'>
                     <figure class="imghvr-push-up">
@@ -115,8 +129,24 @@
                           <i class="herramientas">Nodejs, Express, Sequelize</i>
                           <i class="herramientas">Html, Css, Javascript</i>
                         </p>
+                        <button class="js-modal-trigger button is-primary" data-target="modal-faq-utn">
+                          Abrir
+                        </button>
                       </figcaption>
                     </figure>
+                    <div class="modal" id="modal-faq-utn">
+                      <div class="modal-background"></div>
+                      <div class="modal-content">
+                        <div class="box">
+                          <p class="modal-title">Frecuently Asked Questions UTN</p>
+                          <p class="herramientas">Nodejs + Express & Angular</p>
+                          <img  src="./img/logo-faq-utn.png" alt="">
+                          <img class="faq" src="./img/faq-utn.png" alt="">
+                          <p>Gracias por mirar!</p>
+                        </div>
+                      </div>
+                      <button class="modal-close is-large" aria-label="close"></button>
+                    </div>
                   </div>
                   <div class='column is-4'>
                     <figure class="imghvr-push-up">
@@ -151,7 +181,7 @@
                           <i>Interfaz para marca ficticia</i>
                           <i class="herramientas">Figma - Photoshop</i>
                         </p>
-                        <a href="https://www.behance.net/gallery/191096773/Purity-not-real-Brand">Proyecto en Behance</a>
+                        <a class="button is-primary" target="blank"  href="https://www.behance.net/gallery/191096773/Purity-not-real-Brand">Proyecto en Behance</a>
                       </figcaption>
                     </figure>
                   </div>
@@ -165,6 +195,50 @@
             </div>
         </footer>
     </div>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+      // Functions to open and close a modal
+      function openModal($el) {
+        $el.classList.add('is-active');
+      }
+
+      function closeModal($el) {
+        $el.classList.remove('is-active');
+      }
+
+      function closeAllModals() {
+        (document.querySelectorAll('.modal') || []).forEach(($modal) => {
+          closeModal($modal);
+        });
+      }
+
+      // Add a click event on buttons to open a specific modal
+      (document.querySelectorAll('.js-modal-trigger') || []).forEach(($trigger) => {
+        const modal = $trigger.dataset.target;
+        const $target = document.getElementById(modal);
+
+        $trigger.addEventListener('click', () => {
+          openModal($target);
+        });
+      });
+
+      // Add a click event on various child elements to close the parent modal
+      (document.querySelectorAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button') || []).forEach(($close) => {
+        const $target = $close.closest('.modal');
+
+        $close.addEventListener('click', () => {
+          closeModal($target);
+        });
+      });
+
+      // Add a keyboard event to close all modals
+      document.addEventListener('keydown', (event) => {
+        if(event.key === "Escape") {
+          closeAllModals();
+        }
+      });
+    });
+    </script>
     <script src="https://kit.fontawesome.com/a7553a88ab.js" crossorigin="anonymous"></script>
     <script src="./navbar.js"></script>
     <!-- jQuery 1.7.2+ or Zepto.js 1.0+ -->
